# BigStarTM

./: .gitignore  LICENSE  pyproject.toml
.ipynb_checkpoints/: binaries_bprp-checkpoint.ipynb
src/comoving/: coords.py
